feat: add broker auto start